Update after saving

--- a/practice.html
+++ b/practice.html
@@ -9,12 +9,12 @@
 <body>
   <div class="scene">
     <div class="cube" id="cube">
-      <div class="face front">Start Game</div>
-      <div class="face back">Exit</div>
-      <div class="face right">Settings</div>
-      <div class="face left">About</div>
-      <div class="face top">Credits</div>
-      <div class="face bottom">Help</div>
+      <div class="face front">🐍</div>
+      <div class="face back">🐺 </div>
+      <div class="face right">🐙</div>
+      <div class="face left">🦊</div>
+      <div class="face top">🦄</div>
+      <div class="face bottom">🐻 </div>
     </div>
   </div>
   <script src="script.js"></script>
